--- a/application/AutoPrice/templates/ERROR.html
+++ b/application/AutoPrice/templates/ERROR.html
@@ -24,7 +24,10 @@
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
 <div class="container">
-    <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width192px;height:96px;">
+    <!--<a href="http://insightdatascience.com" >
+        <img src="../static/media/insight_logo.jpeg" alt="InsightLogo" style="width:96px;height:48px;">
+    </a>-->
+    <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width384px;height:192px;">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,36 +35,27 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/home">Home
+              <h2><a class="nav-link text-white" href="/home">Home</h2>
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/htw">How This Works
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" <a href="mailto:autopricedatascience@gmail.com">Email</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <header class="masthead">
-      <div class="overlay">
+<!--
+    <header class="masthead" >
+      <div class="overlay bg-dark">
         <div class="container">
           <h1 class="display-2 text-white">AutoPrice</h1>
         </div>
       </div>
     </header>
-
+-->
+<br><br><br><br><br><br>
 <section>
 <div class="container">
-<div class="row align-items-center">
-<center><h2 class="display-1">ERROR PAGE</h2></center>
-</div>
+<center><h2 class="display-1 text-white">ERROR PAGE</h2></center>
 </div>
 </section>
 
@@ -71,13 +65,12 @@
 
 
 
-    <!-- Footer -->
+    <!-- Footer
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; AutoPrice.site 2017</p>
       </div>
-      <!-- /.container -->
-    </footer>
+    </footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="../static/js/jquery.min.js"></script>
@@ -87,4 +80,5 @@
   </body>
 
 </html>
+
 
