--- a/application/AutoPrice/templates/home.html
+++ b/application/AutoPrice/templates/home.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Insight Data Science Project">
     <meta name="author" content="Andrew Chegwidden">
     <meta name="viewport" content="width=device-width , initial-scale=1" />
-    
     <title>AutoPrice</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="../static/css/one-page-wonder.css" rel="stylesheet">
-
   </head>
-
   <body>
     <!-- Navigation bar at the top -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
 <div class="container">
     <!--<a href="http://insightdatascience.com" >
         <img src="../static/media/insight_logo.jpeg" alt="InsightLogo" style="width:96px;height:48px;">
     </a>-->
-    <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width192px;height:96px;">
+    <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width384px;height:192px;">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,63 +26,45 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/home">Home
+              <h2><a class="nav-link text-white" href="/home">Home</h2>
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/htw">How This Works
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" <a href="mailto:autopricedatascience@gmail.com">Email</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header class="masthead">
-      <div class="overlay">
-        <div class="container">
-          <h1 class="display-2 text-white">AutoPrice</h1>
-        </div>
-      </div>
-    </header>
-
+<br><br><br><br><br><br>
 <section>
-<div class="container">
-<div class="row align-items-center">
-<center><h2 class="display-4">Find out what that new vehicle will REALLY cost you or what you can REALLY afford...</h2>
-
-<form  action="/output" method="GET">
-<div class="form-group">
-<select class="form-control" type="text" id="userVClass" name='userVClass' placeholder="", style="width:550px">
-<option value="" disabled selected style="display: none;">What type of vehicles are you interested in buying?</option>
-<option>sedan</option>
-<option>truck</option>
-<option>SUV</option>
-</div>
-
-
-
-<div class="form-group">
-</select>
-<select class="form-control" type="text" id="userMethod" name='userMethod' placeholder=" ", style="width:550px">
-<option value="" disabled selected style="display: none;">Do you know the sticker price or do you have a monthly budget?</option>
-<option>sticker price</option>
-<option>monthly budget</option>
-</select>
-</div>
-<button type="submit" class="btn btn-default btn-lg">Submit</button>
-</form>
-
-
-
-</center>
-</div>
-</div>
+  <div class="container">
+    <div class="row align-items-center">
+      <center>
+      <h2 class="display-4 text-white" style="font-weight:bold">Find out what that new vehicle will REALLY cost you or what you can REALLY afford...</h2><br><br>
+       <form  action="/output" method="GET">
+        <div class="form-group">
+          <select class="form-control" type="text" id="userVClass" name='userVClass' placeholder="", style="width:700px;font-size:25px;height:50px">
+            <option value="" disabled selected style="display: none;">What type of vehicle are you interested in buying?</option>
+            <option>sedan</option>
+            <option>truck</option>
+            <option>SUV</option>
+          </select>
+        </div>
+        <br>
+        <div class="form-group">
+          <select class="form-control" type="text" id="userMethod" name='userMethod' placeholder=" ", style="width:700px;font-size:25px;height:50px">
+            <option value="" disabled selected style="display: none;">Do you know the MSRP or do you have a monthly budget?</option>
+            <option>MSRP</option>
+            <option>monthly budget</option>
+          </select>
+        </div>
+        </h2><br>
+        <button type="submit" class="btn btn-default btn-lg">Submit</button>
+      </form>
+    </div>
+    <br>
+    <center><h1 class="display-6 text-white">AutoPrice will calculate your expected monthly expenses (which includes financing, fuel, insurance, repair/maintenance, and depreciation) for a given class and price of vehicle.</h1></center>
+  </div>
 </section>
 
 
@@ -99,14 +72,12 @@
 
 
 
-
-    <!-- Footer -->
+    <!-- Footer
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; AutoPrice.site 2017</p>
       </div>
-      <!-- /.container -->
-    </footer>
+    </footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="../static/js/jquery.min.js"></script>
