--- a/application/AutoPrice/templates/ERROR.html
+++ b/application/AutoPrice/templates/ERROR.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Insight Data Science Project">
     <meta name="author" content="Andrew Chegwidden">
     <meta name="viewport" content="width=device-width , initial-scale=1" />
-    
     <title>AutoPrice</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="../static/css/one-page-wonder.css" rel="stylesheet">
-
-  </head>
-
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script type="text/javascript"> $(document).ready(function(){$('[data-toggle="popover"]').popover({placement : 'top',trigger : 'hover',html : true});}); </script>
+    <style type="text/css">
+      .popover-style{margin: 150px 50px;}
+    </style>
+    </head>
   <body>
-    <!-- Navigation bar at the top -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<!-- Navigation bar at the top -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
 <div class="container">
-    <!--<a href="http://insightdatascience.com" >
-        <img src="../static/media/insight_logo.jpeg" alt="InsightLogo" style="width:96px;height:48px;">
-    </a>-->
     <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width384px;height:192px;">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,22 +31,23 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <h2><a class="nav-link text-white" href="/home">Home</h2>
-                <span class="sr-only">(current)</span>
+              <span class="sr-only">(current)</span>
               </a>
+            </li>
+            <!--<li class="nav-item">
+                <h2><a class="nav-link text-white" href = "https://docs.google.com/presentation/d/e/2PACX-1vTH2Gc8j8Ntlwxn9bjiCzyFIUlhBEE5uH6U4Jv5N5SGAYwhz7XMdo1W8VFuXT5smT18X6vN3lmzhlV3/pub?start=true&loop=true&delayms=3000" target="_blank">Demo Slides</h2>
+                <span class="sr-only">(current)</span>
+                </a>
+             </li>-->
+            <li class="nav-item">
+                <h2><a class="nav-link text-white" href="/about">About</h2>
+                <span class="sr-only">(current)</span>
+                </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<!--
-    <header class="masthead" >
-      <div class="overlay bg-dark">
-        <div class="container">
-          <h1 class="display-2 text-white">AutoPrice</h1>
-        </div>
-      </div>
-    </header>
--->
 <br><br><br><br><br><br>
 <section>
 <div class="container">
@@ -59,25 +55,7 @@
 </div>
 </section>
 
-
-
-
-
-
-
-    <!-- Footer
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; AutoPrice.site 2017</p>
-      </div>
-    </footer>-->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/popper.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-
-  </body>
+</body>
 
 </html>
 
