--- a/application/AutoPrice/templates/home.html
+++ b/application/AutoPrice/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="../static/media/AutoPriceLogo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Insight Data Science Project">
@@ -9,15 +10,20 @@
     <title>AutoPrice</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/one-page-wonder.css" rel="stylesheet">
-  </head>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script type="text/javascript"> $(document).ready(function(){$('[data-toggle="popover"]').popover({placement : 'top',trigger : 'hover',html : true});}); </script>
+    <style type="text/css">
+      .popover-style{margin: 150px 50px;}
+    </style>
+    </head>
   <body>
-    <!-- Navigation bar at the top -->
+
+<!-- Navigation bar at the top -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
 <div class="container">
-    <!--<a href="http://insightdatascience.com" >
-        <img src="../static/media/insight_logo.jpeg" alt="InsightLogo" style="width:96px;height:48px;">
-    </a>-->
     <img src="../static/media/AutoPriceLogo.png" alt="AutoPriceLogo" style="width384px;height:192px;">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,8 +33,18 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <h2><a class="nav-link text-white" href="/home">Home</h2>
-                <span class="sr-only">(current)</span>
+              <span class="sr-only">(current)</span>
               </a>
+            </li>
+            <!--<li class="nav-item">
+                <h2><a class="nav-link text-white" href = "https://docs.google.com/presentation/d/e/2PACX-1vTH2Gc8j8Ntlwxn9bjiCzyFIUlhBEE5uH6U4Jv5N5SGAYwhz7XMdo1W8VFuXT5smT18X6vN3lmzhlV3/pub?start=true&loop=true&delayms=3000" target="_blank">Demo Slides</h2>
+                <span class="sr-only">(current)</span>
+                </a>
+             </li>-->
+            <li class="nav-item">
+                <h2><a class="nav-link text-white" href="/about">About</h2>
+                <span class="sr-only">(current)</span>
+                </a>
             </li>
           </ul>
         </div>
@@ -63,28 +79,15 @@
       </form>
     </div>
     <br>
-    <center><h1 class="display-6 text-white">AutoPrice will calculate your expected monthly expenses (which includes financing, fuel, insurance, repair/maintenance, and depreciation) for a given class and price of vehicle.</h1></center>
+    <center><h1 class="display-6 text-white" >AutoPrice will calculate your expected monthly expenses (which include financing, fuel, insurance, repair/maintenance, and depreciation) for a given class and price of vehicle.</h1></center>
   </div>
 </section>
 
-
-
-
-
-
-    <!-- Footer
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; AutoPrice.site 2017</p>
-      </div>
-    </footer>-->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/popper.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+<div class="popover-style">
+  <center><h2 class="display-6 text-white" data-toggle="popover" title="Model Assumptions" data-content="<ul><li>ownership expenses are estimated for a five-year period</li><li>vehicle will be financed to own</li><li>10% down payment</li><li>above average credit</li><li>loan term is 60 months</li></ul>
+">Hover here to see the model's assumptions</h2></center>
+</div>
 
   </body>
-
 </html>
 
